# python-telegram-bot

./: (link unavailable)  .codeclimate.yml  .coverage-fullcov-99  .coverage-submission-two tests  .coveragerc  .deepsource.toml  .editorconfig  .env  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  1  7971311805:AAFkATwbei3EVGYrH0ge_qwtb4Tnsf6QV2k  APBUCHAREST  AUTHORS.rst  Binomo signal bot  Bot  Bot py  Bot uchun  Bot.py  Bot.siza  CHANGES  CHANGES.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dkwin signal Big Small  Dockerfile  Errors and Quick Fixes.txt  King tech renamer  LICENSE  LICENSE.lesser  MANIFEST.in  Makefile  Maxi gain  Nails  (+75 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  lock.yml  pull_request_template.md  renovate.json5  stale.yml
.github/ISSUE_TEMPLATE/: README.md  bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md  question.md  question.yml
.github/workflows/: benchmark.yml  chango.yml  chango_fragment.yml  codeql.yml  copilot-setup-steps.yml  dependabot-prs.yml  doc-tests.yml  docs-admonitions.yml  docs-linkcheck.yml  docs.yml  example_change_warning.yml  example_notifier.yml  gha_security.yml  labelling.yml  lock.yml  mypy.yml  pre-commit_dependencies_notifier.yml  prek.yml  python-publish.yml  pythonpackage.yml  readme_notifier.yml  release_pypi.yml  release_test_pypi.yml  sbom.yml  stale.yml  test.yml  test_official.yml  type_completeness.yml  type_completeness_monthly.yml  unit_tests.yml
.templates/: .editorconfig
.templates/$$var_template/: $$var_filename.js
.templates/template-sample/: index.js
.templates/template-sample-react-component/: index.jsx  index.scss
bot/: .gitignore  config.py  configuration-sample.yaml  configuration.py  main.py  requirements.txt
bot/handlers/: README.md  basic.py  echo.py  hello.py  help.py  index.py  notadoi.py  review.py  start.py  subscribe.py  whoami.py
changes/: LEGACY.rst  config.py
changes/22.0_2025-03-15/: 4671.7B3boYRvHdGzsrZgkpKp7B.toml  4697.GzyGCEgj74G6bTEDbuFjUU.toml  4698.Fkzr3oU2qcFmFX28xfoja5.toml  (+7 more)
codemods/: README.md  add_new_parameter.py  collector.py  helpers.py  requirements-script.txt
contrib/: build-debian.sh
coverages prev/: .coverage-1-nothing in tests, stuff in normal file, 100 cov  .coverage-2-stuff in tests, no stuff in normal file, 74 coverage  .coverage-4- stuff in tests, no stuff in normal, 80 cov, improved
docs/: Makefile  insane.md  requirements-docs.txt
examples/: +84368195865.session  +84368195865.session-journal  +84768458782.session  CalendarBot.py  Game pisti.py  LICENSE.txt  README.md  arbitrarycallbackdatabot.py  autowiring.py  bot.session  chatmemberbot.py  check_follow.py  clibot.py  command_handler_example.py  contexttypesbot.py  conversationbot.md  conversationbot.mmd  conversationbot.py  conversationbot2.md  conversationbot2.mmd  conversationbot2.py  coversationEchobot.py  credentials.json  customwebhookbot.py  customwebhookbot_django.py  customwebhookbot_flask.py  customwebhookbot_quart.py  customwebhookbot_starlette.py  deeplinking.py  diagram-legend.mmd  easyconversationbot.py  echobot.py  echobot2.py  echobot3.py  error_handler.py  errorhandlerbot.py  eventhandler_bot.py  eventhandler_simplebot.py  file_link.py  flaskExample.py  (+35 more)
public_keys/: v12.5-v20.0b0.gpg  v20.0-current.gpg
pytests/: bots.py  conftest.py  pytest.ini  test_animation.py  test_audio.py  test_bot.py  test_callbackquery.py  test_callbackqueryhandler.py  test_chat.py  test_chatmember.py  test_choseninlineresult.py  test_choseninlineresulthandler.py  test_commandhandler.py  test_contact.py  test_conversationhandler.py  test_dispatcher.py  test_document.py  test_file.py  test_filters.py  test_forcereply.py  test_game.py  test_gamehighscore.py  test_helpers.py  test_inlinekeyboardbutton.py  test_inlinekeyboardmarkup.py  test_inlinequery.py  test_inlinequeryhandler.py  test_inlinequeryresultarticle.py  test_inlinequeryresultaudio.py  test_inlinequeryresultcachedaudio.py  test_inlinequeryresultcacheddocument.py  test_inlinequeryresultcachedgif.py  test_inlinequeryresultcachedmpeg4gif.py  test_inlinequeryresultcachedphoto.py  test_inlinequeryresultcachedsticker.py  test_inlinequeryresultcachedvideo.py  test_inlinequeryresultcachedvoice.py  test_inlinequeryresultcontact.py  test_inlinequeryresultdocument.py  test_inlinequeryresultgame.py  (+47 more)
sava690/: echo.py
telegram/: Untitled-1.py  __init__.py  __main__.py  _birthdate.py  _bot.py  _botcommand.py  _botcommandscope.py  _botdescription.py  _botname.py  _business.py  _callbackquery.py  _chat.py  _chataction.py  _chatadministratorrights.py  _chatbackground.py  _chatboost.py  _chatboostadded.py  _chatfullinfo.py  _chatinvitelink.py  _chatjoinrequest.py  _chatlocation.py  _chatmember.py  _chatmemberupdated.py  _chatpermissions.py  _choseninlineresult.py  _copytextbutton.py  _dice.py  _forcereply.py  _forumtopic.py  _gifts.py  _giveaway.py  _keyboardbutton.py  _keyboardbuttonpolltype.py  _keyboardbuttonrequest.py  _linkpreviewoptions.py  _loginurl.py  _menubutton.py  _message.py  _messageautodeletetimerchanged.py  _messageentity.py  (+153 more)
tests/: README.md  README.rst  base.py  botan.py  bots.py  conftest.py  plugin_github_group.py  reupload.py  run.py  test_animation.py  test_annotations.py  test_application.py  test_applicationbuilder.py  test_audio.py  test_basepersistence.py  test_birthdate.py  test_bot.py  test_bot_96.py  test_botaccesssettings.py  test_botan.py  test_botcommand.py  test_botcommandscope.py  test_botdescription.py  test_boteventhandler.py  test_botname.py  test_builders.py  test_business.py  test_business_classes.py  test_business_methods.py  test_callbackcontext.py  test_callbackdatacache.py  test_callbackquery.py  test_callbackqueryhandler.py  test_chat.py  test_chataction.py  test_chatadministratorrights.py  test_chatbackground.py  test_chatboost.py  test_chatboostadded.py  test_chatfullinfo.py  (+202 more)
(+1777 files in other folders)
